src/objects/Unit_Category__c.object
<CustomObject>
    <description>Object used to capture Unit Categories (to align with Yardi) related to Asset Class.</description>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Class</label>
        <referenceTo>Asset_Class__c</referenceTo>
        <relationshipLabel>Unit Categories</relationshipLabel>
        <relationshipName>Unit_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_LeaseItems_To_DCCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push LeaseItems To DCCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Unit Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>